--- a/package.json
+++ b/package.json
@@ -1,19 +1,56 @@
 {
-	"name": "back-end",
+	"name": "github-stars",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"babel": {
+		"presets": [
+			"@babel/preset-env",
+			"@babel/preset-react"
+		],
+		"plugins": [
+			"@babel/plugin-proposal-class-properties"
+		]
+	},
 	"scripts": {
-		"start": "node server.js"
+		"create": "webpack",
+		"start": "webpack-dev-server --open",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/raul-f/github-stars.git"
 	},
 	"keywords": [],
-	"author": "",
-	"license": "ISC",
+	"author": "raul-f",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/raul-f/github-stars/issues"
+	},
+	"homepage": "https://github.com/raul-f/github-stars#readme",
 	"dependencies": {
-		"dotenv": "^6.2.0",
-		"express": "^4.16.4",
-		"express-session": "^1.15.6",
-		"passport": "^0.4.0",
-		"passport-github": "^1.1.0"
+		"animejs": "^3.0.1",
+		"apollo-boost": "^0.1.27",
+		"apollo-cache-inmemory": "^1.4.2",
+		"apollo-link-context": "^1.0.14",
+		"apollo-link-http": "^1.5.11",
+		"graphql": "^14.1.1",
+		"react": "^16.8.1",
+		"react-apollo": "^2.4.1",
+		"react-dom": "^16.8.1"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.2.2",
+		"@babel/plugin-proposal-class-properties": "^7.3.0",
+		"@babel/polyfill": "^7.2.5",
+		"@babel/preset-env": "^7.3.1",
+		"@babel/preset-react": "^7.0.0",
+		"babel-loader": "^8.0.5",
+		"css-loader": "^2.1.0",
+		"html-webpack-plugin": "^3.2.0",
+		"style-loader": "^0.23.1",
+		"webpack": "^4.29.3",
+		"webpack-cli": "^3.2.3",
+		"webpack-dev-server": "^3.1.14"
 	}
 }
